+ Added QBuffer::isNull()
* Made FXIPCChannel::sendMsg() allocate send buffers based on previous send
message size
+ Added FXRefedObject::resetDying()
* Made FXProcess::dllHandle easier to use
+ Added operator!() to Generic::typeInfoBase
+ Added new option "disableGUI" to build system with small mods to sources
to remove FXApp and FXObject dependencies
+ Added QTransString::empty()



v0.85 13th Feb 2005:
-=-=-=-=-=-=-=-=-=-=
B Fixed compile error in FXRefedObject.h when FXRefedObject subclass defines
its own noMoreReferrers().
B FXIPCChannel should have thrown away ack messages when sender did not
specifiy ack location
B FXPipe was redefining FXERRHWIN for itself and thus losing the changes
implemented in FXException::int_throwWinError()
B FXMemMap::mappedRegion() was failing when offset was in last mapped
region
B Anything in FXDir or FXFile taking an "acceptAbs" parameter wasn't
accepting absolute paths even when this parameter was true
B Failure to truncate a FXFile or FXMemMap didn't generate an error code
on Win32
B FXMemMap::mapIn() would map a zero extent if the file was empty.
B If an FXException was being rethrown, stacklevel wasn't being reset on
transference up a stack level and thus causing a segfault on that exception's
destruction
B Fixed some bad assembler in ptmalloc2 and FXThread.cxx which GCC 3.4.x was
complaining about
B FXThread wasn't setting up default nested exception handling frame causing
fatal app exit
B Fixed memory leak in FXTextCodecs inherited from FOX
B Fixed occasional segfault in FXFSMonitor due to insufficient data locking
B Fixed failure to maintain wait counts in FXWaitCondition on Win32
B Fixed FXBlkSocket not being cancellable on FreeBSD
B FXMemMap wasn't using /tmp before its memory names which caused breakage
on FreeBSD
B Finally fixed problem with FXIPCChannel cleanup causing early thread exit
on POSIX
B FXThread::id() wasn't returning correct value on FreeBSD
B FXPipe::maxAtomicLength() was incorrect on FreeBSD